--- a/webapps/examples/build.xml
+++ b/webapps/examples/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<project name="myfaces-examples" default="all">
+<project name="myfaces-examples" default="compile-and-copy-libs">
 
     <property environment="env"/>
 
@@ -45,9 +45,9 @@
     </target>
 
 
-    <target name="compile"
+    <target name="compile-and-copy-libs"
             depends="-check-myfaces-jar"
-            description="compiles the examples java classes to WEB-INF/classes">
+            description="compiles the examples java classes to WEB-INF/classes and copies all needed libs to WEB-INF/lib">
         <mkdir dir="${web-inf.classes.dir}"/>
         <javac srcdir="${examples.src}"
                destdir="${web-inf.classes.dir}"
@@ -60,12 +60,7 @@
                      excludes="**/*.java
                                **/package.html"/>
         </copy>
-    </target>
 
-
-    <target name="copy-libs"
-            depends="-check-myfaces-jar"
-            description="copies all needed libs to WEB-INF/lib" >
         <mkdir dir="${web-inf.lib.dir}"/>
         <copy todir="${web-inf.lib.dir}">
             <fileset file="${mail.jar}"/>
@@ -77,7 +72,7 @@
 
 
     <target name="web_ss"
-            depends="compile, copy-libs"
+            depends="compile-and-copy-libs"
             description="copies the examples web application to a new dir and adjusts all options to 'save state in server sessions'." >
 
         <mkdir dir="${web_ss.dir}"/>
@@ -103,7 +98,7 @@
 
 
     <target name="release"
-            depends="compile, copy-libs, web_ss"
+            depends="compile-and-copy-libs, web_ss"
             description="creates the examples release file myfaces-x.x.x-examples.tgz (don't forget to adjust manifest.properties!)">
         <tar destfile="${project.dir}/myfaces-${manifest.impl.version}-examples.tgz"
              compression="gzip">
@@ -118,18 +113,14 @@
                         excludes="WEB-INF/lib/jsf-api.jar,
                                   WEB-INF/web_ss.xml"
                         prefix="myfaces-${manifest.impl.version}/webapps/examples/web"/>
+            <tarfileset dir="${basedir}"
+                        includes="*"
+                        excludes="*.properties"
+                        prefix="myfaces-${manifest.impl.version}/webapps/examples"/>
             <tarfileset dir="${web_ss.dir}"
                         excludes="WEB-INF/lib/jsf-api.jar"
                         prefix="myfaces-${manifest.impl.version}/webapps/examples/web_ss"/>
         </tar>
-    </target>
-
-
-
-
-    <target name="all"
-            depends="compile, copy-libs, web_ss"
-            description="establish everything to make the examples webapp runnable in a servlet container">
     </target>
 
 
