*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165929 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/build.properties.sample
+++ b/webapps/examples/build.properties.sample
@@ -1,4 +1,4 @@
 # Don't forget to use double-backslashes in windows paths!
 
 # directory where the server-saving examples web should be copied to
-web_ss.dir = web_ss
+web_ss.dir = web_serversaving
