*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165930 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -147,6 +147,7 @@
             <fileset file="${myfaces.jar}" />
             <fileset file="myfaces-*.tgz" />
             <fileset dir="${doc.dir}/api" />
+            <fileset dir="${temp.dir}/myfaces-jar"/>    <!-- in case of interrupted builds -->
         </delete>
         <ant dir="webapps/examples"
             antfile="build.xml"
