--- a/webapps/examples/web/WEB-INF/web.xml
+++ b/webapps/examples/web/WEB-INF/web.xml
@@ -33,7 +33,7 @@
         * "FINEST", "FINER", "FINE", "INFO", "WARNING", "SEVERE"
         -->
         <param-name>logLevel</param-name>
-        <param-value>INFO</param-value>
+        <param-value>FINER</param-value>
     </context-param>
 
     <context-param>
@@ -133,6 +133,23 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
+
+    <!-- O'Reilly MultiPart Filter -->
+    <!--
+    <filter>
+        <filter-name>multipartFilter</filter-name>
+        <filter-class>com.oreilly.servlet.MultipartFilter</filter-class>
+        <init-param>
+            <param-name>uploadDir</param-name>
+            <param-value>/tmp</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>multipartFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    -->
+
 
 
     <listener>
