--- a/build.properties.sample
+++ b/build.properties.sample
@@ -1,17 +1,17 @@
 # Don't forget to use double-backslashes in windows paths!
 
-# File path to Java Mail API archiv version 1.1
-mail.jar = lib/mail.jar
-
 # File path to Java Servlet API archiv version 2.3
-servlet.jar = lib/servlet.jar
+servlet.jar = ${project.dir}/lib/servlet.jar
+
+# File path to com.oreilly.servlet package
+cos.jar = ${project.dir}/lib/cos.jar
 
 # File path to JavaServer Faces API archiv version 1.0 EA3
 # (not included, please download from http://java.sun.com/j2ee/javaserverfaces/download.html)
-jsf-api.jar = lib/jsf-api.jar
+jsf-api.jar = ${project.dir}/lib/jsf-api.jar
 
 # File path of MyFaces archiv to be created
-myfaces.jar = lib/myfaces.jar
+myfaces.jar = ${project.dir}/lib/myfaces.jar
 
 # Temporary directory
 # (if not set, environment variable "TEMP" will be used)
