--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -16,6 +16,7 @@ nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Components
 nav_Selectbox       = Selectboxes (CarConfigurator)
+nav_FileUpload      = File upload
 
 
 alt_logo = MyFaces - the open source JSF implementation
