*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165950 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages.properties
@@ -17,6 +17,7 @@
 #
 net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION  = ERROR | Input Error | Specified value is not a valid number.
 net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION        = ERROR | Input Error | Specified value is not a valid number.
+net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION     = ERROR | Input Error | Specified value is not a valid number.
 net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION     = ERROR | Input Error | Could not convert '{0}' to Boolean.
 net.sourceforge.myfaces.convert.impl.DateConverter.EXCEPTION        = ERROR | Input Error | Specified value is not a valid date.
 net.sourceforge.myfaces.convert.impl.DateTimeConverter.EXCEPTION    = ERROR | Input Error | Specified value is not a valid date/time.
