--- a/src/myfaces/org/apache/myfaces/convert/converter.properties
+++ b/src/myfaces/org/apache/myfaces/convert/converter.properties
@@ -21,6 +21,7 @@
 #
 BigDecimalConverter     = net.sourceforge.myfaces.convert.impl.BigDecimalConverter
 LongConverter           = net.sourceforge.myfaces.convert.impl.LongConverter
+IntegerConverter        = net.sourceforge.myfaces.convert.impl.IntegerConverter
 BooleanConverter        = net.sourceforge.myfaces.convert.impl.BooleanConverter
 StringConverter         = net.sourceforge.myfaces.convert.impl.StringConverter
 StringArrayConverter    = net.sourceforge.myfaces.convert.impl.StringArrayConverter
