--- a/src/myfaces/org/apache/myfaces/convert/converterMap.properties
+++ b/src/myfaces/org/apache/myfaces/convert/converterMap.properties
@@ -22,6 +22,7 @@
 #java.lang
 java.lang.Boolean           = BooleanConverter
 java.lang.Long              = LongConverter
+java.lang.Integer           = IntegerConverter
 java.lang.String            = StringConverter
 
 #Arrays
