--- a/webapps/tagunit/build.xml
+++ b/webapps/tagunit/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<project name="myfaces-examples" default="compile-and-copy-libs">
+<project name="myfaces-tagunit" default="copy-libs">
 
     <property environment="env"/>
 
@@ -12,7 +12,6 @@
 
     <!-- Properties -->
     <property file="../../build.properties"/>
-    <property file="build.properties"/>
 
     <!-- Temporary dir. May be overridden in build.properties -->
     <property name="temp.dir" value="${env.TEMP}"/>
