*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165959 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -160,6 +160,10 @@
             antfile="build.xml"
             inheritall="false"
             target="clean"/>
+        <ant dir="webapps/tagunit"
+            antfile="build.xml"
+            inheritall="false"
+            target="clean"/>
     </target>
 
 </project>
