*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165968 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/tagunit/build.xml
+++ b/webapps/tagunit/build.xml
@@ -46,6 +46,7 @@
         <delete quiet="true" failonerror="false" includeEmptyDirs="true">
             <fileset file="${web-inf.lib.dir}/myfaces.jar" />
             <fileset file="${web-inf.lib.dir}/jsf-api.jar" />
+            <fileset dir="${web-inf.classes.dir}"/>
         </delete>
     </target>
 
