*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165974 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/WEB-INF/web.xml
+++ b/webapps/examples/web/WEB-INF/web.xml
@@ -33,7 +33,7 @@
         * "FINEST", "FINER", "FINE", "INFO", "WARNING", "SEVERE"
         -->
         <param-name>logLevel</param-name>
-        <param-value>INFO</param-value>
+        <param-value>FINEST</param-value>
     </context-param>
 
     <context-param>
