--- a/webapps/examples/web/WEB-INF/web.xml
+++ b/webapps/examples/web/WEB-INF/web.xml
@@ -27,55 +27,58 @@
 
     <context-param>
         <!--
-        * Init parameter "logLevel"
+        * Init parameter "myfaces_LogLevel"
         * The log level of the MyFacesLogger.
         * Allowed values are:
         * "FINEST", "FINER", "FINE", "INFO", "WARNING", "SEVERE"
         -->
-        <param-name>logLevel</param-name>
+        <param-name>myfaces_LogLevel</param-name>
         <param-value>WARNING</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "jspInfoCaching"
-        * MyFaces needs to parse JSP files when saving state information.
-        * Setting this parameter to true, means that JSP files are cached
-        * in the servlet context (= application in JSP terminology).
-        * During development this should always be set to false, because
-        * otherwise changes in JSPs will not be recognized by MyFaces.
+        * Init parameter "myfaces_CheckJspModification"
+        * MyFaces needs to parse JSP files when doing the "minimizing state
+        * saving" strategy. The parsed infos are (of course) cached in memory.
+        * Setting this parameter to true, means that JSP files are checked
+        * for modification whenever a parsed info is needed. If the JSP was
+        * modified (i.e. has a newer file date than when it was parsed) it is
+        * parsed again.
+        * In a development environment you should always set this parameter to
+        * true. Setting it to false in production might enhance performance.
         -->
-        <param-name>jspInfoCaching</param-name>
-        <param-value>false</param-value>
+        <param-name>myfaces_CheckJspModification</param-name>
+        <param-value>true</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "servletMappingMode"
+        * Init parameter "myfaces_ServletMappingMode"
         * Allowed values:
         * "virtual_path" = classic servlet-mapping as described in the specification.
         * "extension" = alternative ServletMapping for the url-pattern "*.jsf".
         -->
-        <param-name>servletMappingMode</param-name>
+        <param-name>myfaces_ServletMappingMode</param-name>
         <param-value>extension</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "stateSavingMode"
+        * Init parameter "myfaces_StateSavingMode"
         * Allowed values:
         * "server_session" = tree state is saved in a HTTPSession
         * "client_serialized" = tree is serialized, zipped and saved as url parameter or hidden input
         * "client_minimized" = only those (dynamical) tree and component infos are saved that could not otherwise be restored by parsing the JSP
         * "client_minimized_zipped" = like "client_minimal", but additionally state info is zipped (GZIP), encoded to allowed characters (Base64) written as one query parameter or hidden form input.
         -->
-        <param-name>stateSavingMode</param-name>
+        <param-name>myfaces_StateSavingMode</param-name>
         <param-value>client_minimized</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "autoCreateRequestScopeBeans"
+        * Init parameter "myfaces_AutoCreateRequestScopeBeans"
         * If you are using the "client_minimized" state saving feature it makes
         * sense to only use request scope beans and not to use session beans.
         * Well, there is one problem with request scope beans. They do not yet
@@ -85,35 +88,38 @@
         * request tree phase, all request scope beans get automatically
         * (re)created.
         -->
-        <param-name>autoCreateRequestScopeBeans</param-name>
+        <param-name>myfaces_AutoCreateRequestScopeBeans</param-name>
         <param-value>true</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "discardInternalAttributes"
+        * Init parameter "myfaces_DiscardInternalAttributes"
         * This parameter is only used in the two state saving modes
-        * "server_session" and "client_serialized" and is meant to reduce
+        * "server_session" and "client_serialized" and is intended to reduce
         * the size of the tree to be saved.
         * Setting it to true means, that all internal attributes
         * (i.e. attributes with a name starting with "javax." or
         * "net.sourceforge.myfaces.") are removed prior to saving the tree
         * for the next request.
         -->
-        <param-name>discardInternalAttributes</param-name>
+        <param-name>myfaces_DiscardInternalAttributes</param-name>
         <param-value>true</param-value>
     </context-param>
 
     <context-param>
         <!--
-        * Init parameter "disableJspParser"
+        * Init parameter "myfaces_DisableJspParser"
         * This parameter is useful for the two state saving modes
         * "server_session" and "client_serialized" and disables the
         * jsp parsing completely.
         * Setting it to true means, that the integrated jsp parser (jasper)
-        * will not be used.
+        * will not be used. Normally you can leave this parameter to false.
+        * Set only true when you know what you are doing or when you suspect the
+        * integrated jasper to have (unwanted) sideeffects on your servlet
+        * container.
         -->
-        <param-name>disableJspParser</param-name>
+        <param-name>myfaces_DisableJspParser</param-name>
         <param-value>false</param-value>
     </context-param>
 
