*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165987 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.properties.sample
+++ b/build.properties.sample
@@ -16,3 +16,7 @@ myfaces.jar = ${project.dir}/lib/myfaces.jar
 # Temporary directory
 # (if not set, environment variable "TEMP" will be used)
 #temp.dir = temp
+
+# Compiler optimize
+javac.optimize = on
+
