--- a/build.properties.sample
+++ b/build.properties.sample
@@ -20,3 +20,6 @@ myfaces.jar = ${project.dir}/lib/myfaces.jar
 # Compiler optimize
 javac.optimize = on
 
+# uncomment to use aspectj for performance measuring
+# (you must also adapt the paths in src/aspectj/build.properties!)
+use-aspectj = true
